tree-sitter-anima/grammar.js
    program: $ => repeat($._declaration),

    // ================================================================
    // Declarations
    // ================================================================

    _declaration: $ => choice(
      $.import_declaration,
      $.module_declaration,
      $.function_declaration,
      $.intent_declaration,
      $.evolving_declaration,
      $.fuzzy_declaration,
      $.entity_declaration,
      $.sealed_declaration,
      $.interface_declaration,
      $.type_alias,
      $.agent_declaration,
      $.feature_declaration,
      $.context_declaration,
      $.resource_declaration,
      $.protocol_declaration,
      $.diagnosable_declaration,
      $.val_declaration,
      $.var_declaration,
    ),

    // ======================== Imports & Modules =====================

    function_declaration: $ => seq(
      repeat($.modifier),
      'fun',
      optional($.type_parameters),
      optional(seq(field('receiver', $._type), '.')),
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional(seq(':', field('return_type', $._type))),
      optional(field('context_clause', $.context_clause)),
      field('body', choice($.block, seq('=', $._expression))),
    ),

    parameter_list: $ => seq(
      '(',
      optional(commaSep1($.parameter)),
      ')',
    ),

    parameter: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type),
      optional(seq('=', field('default', $._expression))),
    ),

    intent_declaration: $ => seq(
      repeat($.modifier),
      'intent',
      'fun',
      optional($.type_parameters),
      optional(seq(field('receiver', $._type), '.')),
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional(seq(':', field('return_type', $._type))),
      optional(field('context_clause', $.context_clause)),
      field('body', $.intent_body),
    ),

    intent_body: $ => seq(
      '{',
      repeat($._intent_clause),
      '}',
    ),

    _intent_clause: $ => choice(
      $.ensure_clause,
      $.prefer_clause,
      $.avoid_clause,
      $.assume_clause,
      $.hint_clause,
      $.cost_clause,
      $.fallback_clause,
      $.adapt_clause,
      $.given_block,
      $._statement,
    ),

    ensure_clause: $ => seq('ensure', $.block),

    fuzzy_declaration: $ => seq(
      'fuzzy',
      'fun',
      optional($.type_parameters),
      optional(seq(field('receiver', $._type), '.')),
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional(seq(':', 'Boolean')),
      field('body', $.fuzzy_body),
    ),

    fuzzy_body: $ => seq(
      '{',
      repeat($._fuzzy_clause),
      '}',
    ),

    _fuzzy_clause: $ => choice(
      $.factors_block,
      $.metric_block,
      $._statement,
    ),

    factors_block: $ => seq(
      'factors',
      '{',
      repeat($.factor),
      '}',
    ),

    factor: $ => seq(
      field('condition', $._expression),
      'weight',
      field('value', $.float_literal),
    ),

    _type: $ => choice(
      $.primitive_type,
      $.type_identifier,
      $.confidence_type,
      $.nullable_type,
      $.union_type,
      $.intersection_type,
      $.nl_type,
      $.generic_type,
      $.tuple_type,
      $.function_type,
      $.parenthesized_type,
    ),

    primitive_type: _ => choice(
      'Int', 'Float', 'String', 'Bool', 'Byte',
      'Unit', 'Any', 'Nothing', 'ID', 'DateTime', 'Boolean',
    ),

    nullable_type: $ => prec.left(PREC.POSTFIX, seq(
      $._type,
      '?',
    )),

    nl_type: $ => prec.right(2, seq(
      'NL',
      optional(seq('<', $.identifier, '>')),
    )),

    generic_type: $ => seq(
      choice('Fuzzy', 'Intent', 'Stream', 'List', 'MutableList',
             'Set', 'Map', 'MutableMap', 'Result'),
      '<',
      commaSep1($._type),
      '>',
    ),

    _expression: $ => choice(
      $.identifier,
      $.qualified_identifier,
      $._literal,
      $.this_expression,
      $.self_expression,
      $.parenthesized_expression,
      $.member_expression,
      $.safe_member_expression,
      $.non_null_expression,
      $.call_expression,
      $.index_expression,
      $.confidence_expression_val,
      $.binary_expression,
      $.unary_expression,
      $.postfix_update_expression,
      $.type_check_expression,
      $.type_cast_expression,
      $.safe_cast_expression,
      $.range_expression,
      $.in_expression,
      $.elvis_expression,
      $.semantic_expression,
      $.when_expression,
      $.if_expression,
      $.lambda_expression,
      $.delegate_expression,
      $.parallel_expression,
      $.recall_expression,
      $.ask_expression,
      $.diagnose_expression,
      $.emit_expression,
      $.try_expression,
      $.spawn_expression,
    ),

    binary_expression: $ => choice(
      ...[
        ['*', PREC.MULTIPLICATIVE],
        ['/', PREC.MULTIPLICATIVE],
        ['%', PREC.MULTIPLICATIVE],
        ['per', PREC.MULTIPLICATIVE],
        ['+', PREC.ADDITIVE],
        ['-', PREC.ADDITIVE],
        ['<', PREC.COMPARISON],
        ['>', PREC.COMPARISON],
        ['<=', PREC.COMPARISON],
        ['>=', PREC.COMPARISON],
        ['==', PREC.EQUALITY],
        ['!=', PREC.EQUALITY],
        ['matches', PREC.EQUALITY],
        ['&&', PREC.AND],
        ['||', PREC.OR],
        ['to', PREC.RANGE],
      ].map(([op, prec_level]) =>
        prec.left(prec_level, seq(
          field('left', $._expression),
          field('operator', op),
          field('right', $._expression),
        ))
      ),
    ),

    elvis_expression: $ => prec.right(PREC.ELVIS, seq(
      field('value', $._expression),
      '?:',
      field('fallback', $._expression),
    )),

    string_template: $ => seq(
      '"',
      repeat(choice(
        $.string_content,
        $.template_substitution,
        $.simple_substitution,
        $.escape_sequence,
      )),
      '"',
    ),

    string_content: _ => token.immediate(prec(1, /[^"\\$]+/)),
    _statement: $ => choice(
      $.val_declaration,
      $.var_declaration,
      $.assignment_statement,
      $.return_statement,
      $.for_statement,
      $.while_statement,
      $.expression_statement,
    ),

    return_statement: $ => prec.right(seq(
      'return',
      optional(field('value', $._expression)),
    )),

    expression_statement: $ => $._expression,

    // ================================================================
    // Patterns
    // ================================================================

    block: $ => seq(
      '{',
      repeat($._statement),
      '}',
    ),

    // ================================================================
    // Literals & Identifiers
    // ================================================================

    int_literal: _ => token(/[0-9][0-9_]*/),

    float_literal: _ => token(/[0-9][0-9]*\.[0-9][0-9_]*/),

    identifier: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    qualified_identifier: $ => prec.left(seq(
      $.identifier,
      repeat1(seq('.', $.identifier)),
    )),

    // ================================================================
    // Comments
    // ================================================================
